Package_Tools/include-C/ssh/libssh/sftp.pp


function sftp_get_client_message(sftp:Tsftp_session):Tsftp_client_message;cdecl;external;
procedure sftp_client_message_free(msg:Tsftp_client_message);cdecl;external;
function sftp_client_message_get_type(msg:Tsftp_client_message):Tuint8_t;cdecl;external;
(* Const before type ignored *)
function sftp_client_message_get_filename(msg:Tsftp_client_message):Pchar;cdecl;external;
(* Const before type ignored *)
procedure sftp_client_message_set_filename(msg:Tsftp_client_message; newname:Pchar);cdecl;external;
(* Const before type ignored *)
function sftp_client_message_get_data(msg:Tsftp_client_message):Pchar;cdecl;external;
function sftp_client_message_get_flags(msg:Tsftp_client_message):Tuint32_t;cdecl;external;
(* Const before type ignored *)
function sftp_client_message_get_submessage(msg:Tsftp_client_message):Pchar;cdecl;external;
function sftp_send_client_message(sftp:Tsftp_session; msg:Tsftp_client_message):longint;cdecl;external;
(* Const before type ignored *)
function sftp_reply_name(msg:Tsftp_client_message; name:Pchar; attr:Tsftp_attributes):longint;cdecl;external;
function sftp_reply_handle(msg:Tsftp_client_message; handle:Tssh_string):longint;cdecl;external;
function sftp_handle_alloc(sftp:Tsftp_session; info:pointer):Tssh_string;cdecl;external;
function sftp_reply_attr(msg:Tsftp_client_message; attr:Tsftp_attributes):longint;cdecl;external;
function sftp_handle(sftp:Tsftp_session; handle:Tssh_string):pointer;cdecl;external;
(* Const before type ignored *)
function sftp_reply_status(msg:Tsftp_client_message; status:Tuint32_t; message:Pchar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function sftp_reply_names_add(msg:Tsftp_client_message; file:Pchar; longname:Pchar; attr:Tsftp_attributes):longint;cdecl;external;
function sftp_reply_names(msg:Tsftp_client_message):longint;cdecl;external;
(* Const before type ignored *)
function sftp_reply_data(msg:Tsftp_client_message; data:pointer; len:longint):longint;cdecl;external;
procedure sftp_handle_remove(sftp:Tsftp_session; handle:pointer);cdecl;external;
{ SFTP commands and constants  }
const
  SSH_FXP_INIT = 1;  
  SSH_FXP_VERSION = 2;  
  SSH_FXP_OPEN = 3;  
  SSH_FXP_CLOSE = 4;  
  SSH_FXP_READ = 5;  
  SSH_FXP_WRITE = 6;  
  SSH_FXP_LSTAT = 7;  
  SSH_FXP_FSTAT = 8;  
  SSH_FXP_SETSTAT = 9;  
  SSH_FXP_FSETSTAT = 10;  
  SSH_FXP_OPENDIR = 11;  
  SSH_FXP_READDIR = 12;  
  SSH_FXP_REMOVE = 13;  
  SSH_FXP_MKDIR = 14;  
  SSH_FXP_RMDIR = 15;  
  SSH_FXP_REALPATH = 16;  
  SSH_FXP_STAT = 17;  
  SSH_FXP_RENAME = 18;  
  SSH_FXP_READLINK = 19;  
  SSH_FXP_SYMLINK = 20;  
  SSH_FXP_STATUS = 101;  
  SSH_FXP_HANDLE = 102;  
  SSH_FXP_DATA = 103;  
  SSH_FXP_NAME = 104;  
  SSH_FXP_ATTRS = 105;  
  SSH_FXP_EXTENDED = 200;  
  SSH_FXP_EXTENDED_REPLY = 201;  
{ attributes  }
{ sftp draft is completely braindead : version 3 and 4 have different flags for same constants  }
{ and even worst, version 4 has same flag for 2 different constants  }
{ follow up : i won't develop any sftp4 compliant library before having a clarification  }
  SSH_FILEXFER_ATTR_SIZE = $00000001;  
  SSH_FILEXFER_ATTR_PERMISSIONS = $00000004;  
  SSH_FILEXFER_ATTR_ACCESSTIME = $00000008;  
  SSH_FILEXFER_ATTR_ACMODTIME = $00000008;  
  SSH_FILEXFER_ATTR_CREATETIME = $00000010;  
  SSH_FILEXFER_ATTR_MODIFYTIME = $00000020;  
  SSH_FILEXFER_ATTR_ACL = $00000040;  
  SSH_FILEXFER_ATTR_OWNERGROUP = $00000080;  
  SSH_FILEXFER_ATTR_SUBSECOND_TIMES = $00000100;  
  SSH_FILEXFER_ATTR_EXTENDED = $80000000;  
  SSH_FILEXFER_ATTR_UIDGID = $00000002;  
{ types  }
  SSH_FILEXFER_TYPE_REGULAR = 1;  
  SSH_FILEXFER_TYPE_DIRECTORY = 2;  
  SSH_FILEXFER_TYPE_SYMLINK = 3;  
  SSH_FILEXFER_TYPE_SPECIAL = 4;  
  SSH_FILEXFER_TYPE_UNKNOWN = 5;  
{*
 * @name Server responses
 *
 * @brief Responses returned by the sftp server.
 * @
  }
{* No error  }
  SSH_FX_OK = 0;  
{* End-of-file encountered  }
  SSH_FX_EOF = 1;  
{* File doesn't exist  }
  SSH_FX_NO_SUCH_FILE = 2;  
{* Permission denied  }
  SSH_FX_PERMISSION_DENIED = 3;  
{* Generic failure  }
  SSH_FX_FAILURE = 4;  
{* Garbage received from server  }
  SSH_FX_BAD_MESSAGE = 5;  
{* No connection has been set up  }
  SSH_FX_NO_CONNECTION = 6;  
{* There was a connection, but we lost it  }
  SSH_FX_CONNECTION_LOST = 7;  
{* Operation not supported by the server  }
  SSH_FX_OP_UNSUPPORTED = 8;  
{* Invalid file handle  }
  SSH_FX_INVALID_HANDLE = 9;  
{* No such file or directory path exists  }
  SSH_FX_NO_SUCH_PATH = 10;  
{* An attempt to create an already existing file or directory has been made  }
  SSH_FX_FILE_ALREADY_EXISTS = 11;  
{* We are trying to write on a write-protected filesystem  }
  SSH_FX_WRITE_PROTECT = 12;  
{* No media in remote drive  }
  SSH_FX_NO_MEDIA = 13;  
{* @  }
{ file flags  }
  SSH_FXF_READ = $01;  
  SSH_FXF_WRITE = $02;  
  SSH_FXF_APPEND = $04;  
  SSH_FXF_CREAT = $08;  
  SSH_FXF_TRUNC = $10;  
  SSH_FXF_EXCL = $20;  
  SSH_FXF_TEXT = $40;  
{ file type flags  }
  SSH_S_IFMT = 00170000;  
  SSH_S_IFSOCK = 0140000;  
  SSH_S_IFLNK = 0120000;  
  SSH_S_IFREG = 0100000;  
  SSH_S_IFBLK = 0060000;  
  SSH_S_IFDIR = 0040000;  
  SSH_S_IFCHR = 0020000;  
  SSH_S_IFIFO = 0010000;  
{ rename flags  }
  SSH_FXF_RENAME_OVERWRITE = $00000001;  
  SSH_FXF_RENAME_ATOMIC = $00000002;  
  SSH_FXF_RENAME_NATIVE = $00000004;  
  SFTP_OPEN = SSH_FXP_OPEN;  
  SFTP_CLOSE = SSH_FXP_CLOSE;  
  SFTP_READ = SSH_FXP_READ;  
  SFTP_WRITE = SSH_FXP_WRITE;  
  SFTP_LSTAT = SSH_FXP_LSTAT;  
  SFTP_FSTAT = SSH_FXP_FSTAT;  
  SFTP_SETSTAT = SSH_FXP_SETSTAT;  
  SFTP_FSETSTAT = SSH_FXP_FSETSTAT;  
  SFTP_OPENDIR = SSH_FXP_OPENDIR;  
  SFTP_READDIR = SSH_FXP_READDIR;  
  SFTP_REMOVE = SSH_FXP_REMOVE;  
  SFTP_MKDIR = SSH_FXP_MKDIR;  
  SFTP_RMDIR = SSH_FXP_RMDIR;  
  SFTP_REALPATH = SSH_FXP_REALPATH;  
  SFTP_STAT = SSH_FXP_STAT;  
  SFTP_RENAME = SSH_FXP_RENAME;  
  SFTP_READLINK = SSH_FXP_READLINK;  
  SFTP_SYMLINK = SSH_FXP_SYMLINK;  
  SFTP_EXTENDED = SSH_FXP_EXTENDED;  
{ openssh flags  }
{ read-only  }
  SSH_FXE_STATVFS_ST_RDONLY = $1;  
{ no setuid  }
  SSH_FXE_STATVFS_ST_NOSUID = $2;  
{ C++ end of extern C conditionnal removed }
{$endif}
{ SFTP_H  }
{* @  }

implementation


end.
